Switch to javafx-gradle-plugin and clean up